--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,9 @@
 {
   "evaluations": {
     "title": "Evaluaciones",
+    "paymentCompletedInfo": "Solo puedes evaluar eventos donde el pago se ha completado y el evento ya ha finalizado.",
+    "noEventsToEvaluate": "No hay eventos disponibles para evaluar",
+    "noEventsDescription": "Los eventos aparecerán aquí una vez que hayan finalizado y el pago se haya completado.",
     "filters": {
       "all": "Todas",
       "done": "Completadas",
@@ -66,6 +69,7 @@
     "close": "Cerrar",
     "toggleMenu": "Alternar menú",
     "userProfile": "Perfil de usuario",
+    "profile": "Mi Perfil",
     "logout": "Cerrar Sesión",
     "status": "Estado",
     "required": "Este campo es requerido",
@@ -102,12 +106,16 @@
     "dashboard": "Dashboard",
     "profile": "Mi Perfil",
     "applications": "Postulaciones",
-    "search": "Buscar espacio",
+    "search": "Buscar eventos",
     "agenda": "Agenda",
     "evaluations": "Evaluaciones",
-    "payments": "Pagos Recibidos"
+    "payments": "Pagos"
   },
   "payments": {
+    "titles": {
+      "received": "Pagos Recibidos",
+      "made": "Pagos Realizados"
+    },
     "noPayments": "No hay pagos registrados",
     "loading": "Cargando pagos...",
     "columns": {
@@ -191,7 +199,51 @@
     "email": "Correo electrónico",
     "password": "Contraseña",
     "submit": "Ingresar",
-    "error": "Credenciales inválidas"
+    "error": "Credenciales inválidas",
+    "noAccount": "¿No tienes una cuenta?",
+    "register": "Registrarse"
+  },
+  "register": {
+    "title": "Crear Cuenta",
+    "selectRole": "Selecciona tu rol",
+    "musician": "Músico / Banda",
+    "promoter": "Promotor / Espacio",
+    "name": "Nombre completo",
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "confirmPassword": "Confirmar contraseña",
+    "musicalInfo": "Información Musical",
+    "genre": "Género musical",
+    "type": "Tipo",
+    "description": "Descripción",
+    "profilePhoto": "Foto de perfil",
+    "selectImage": "Seleccionar imagen",
+    "maxSize": "Máximo 5MB - JPG, PNG, GIF",
+    "promoterInfo": "Información para Promotores",
+    "promoterDescription": "Como promotor podrás crear eventos, gestionar postulaciones de músicos y administrar tus espacios. Después del registro podrás completar información adicional sobre tus locales.",
+    "createAccount": "Crear cuenta",
+    "hasAccount": "¿Ya tienes una cuenta?",
+    "goToLogin": "Iniciar sesión",
+    "typeOptions": {
+      "soloist": "Solista",
+      "band": "Banda"
+    },
+    "placeholders": {
+      "name": "Ingrese su nombre completo",
+      "email": "Ingrese su correo electrónico",
+      "password": "Ingrese su contraseña",
+      "confirmPassword": "Confirme su contraseña",
+      "genre": "Seleccione su género",
+      "type": "Seleccione el tipo",
+      "description": "Cuéntanos sobre tu música, experiencia, etc."
+    },
+    "validation": {
+      "required": "Por favor, complete todos los campos requeridos",
+      "passwordMismatch": "Las contraseñas no coinciden",
+      "imageTooLarge": "La imagen es demasiado grande. Máximo 5MB",
+      "invalidImageType": "Tipo de archivo no válido. Solo se permiten imágenes"
+    },
+    "success": "Registro exitoso. Redirigiendo al login..."
   },
   "dashboard": {
     "welcome": "Bienvenido {name}",
@@ -254,6 +306,8 @@
     "alreadyApplied": "Ya has postulado a este evento",
     "status": {
       "pending": "Pendiente",
+      "contract_pending": "Pendiente de Contrato",
+      "signed": "Firmado",
       "accepted": "Aceptado",
       "rejected": "Rechazado",
       "active": "Activo"
@@ -285,6 +339,8 @@
     "reject": "Rechazar solicitud",
     "status": {
       "pending": "Pendiente",
+      "contract_pending": "Pendiente de Contrato",
+      "signed": "Firmado",
       "accepted": "Aceptado",
       "rejected": "Rechazado",
       "confirmed": "Aceptado"
@@ -342,9 +398,40 @@
     },
     "legend": {
       "events": "Eventos",
-      "soundchecks": "Pruebas de sonido"
+      "soundchecks": "Pruebas de sonido",
+      "contractPending": "Pendiente de Contrato",
+      "contractSigned": "Contrato firmado"
     },
-    "today": "Hoy"
+    "eventTypes": {
+      "event": "Evento",
+      "soundcheck": "Prueba de sonido"
+    },
+    "today": "Hoy",
+    "loading": "Cargando eventos...",
+    "refresh": "Recargar eventos",
+    "noEvents": {
+      "title": "No tienes eventos programados",
+      "description": "Para que aparezcan eventos aquí necesitas:",
+      "requirements": {
+        "apply": "Postularte a eventos disponibles",
+        "accepted": "Que tu postulación sea aceptada por el promotor"
+      },
+      "searchButton": "Buscar eventos"
+    },
+    "eventStatus": {
+      "accepted": "Aceptado",
+      "contract_pending": "Pendiente de Contrato",
+      "signed": "Firmado",
+      "pending": "Pendiente"
+    },
+    "tooltip": {
+      "time": "Hora",
+      "location": "Lugar",
+      "status": "Estado",
+      "contract": "Contrato",
+      "soundcheck": "Prueba de sonido",
+      "type": "Tipo"
+    }
   },
   "promoter": {
     "dashboard": {
